Improve scroll behavior for book appointment button; Fix transform on site-background div hiding background svgs on safari

--- a/web/app/themes/artandscience/assets/styles/components/_base.scss
+++ b/web/app/themes/artandscience/assets/styles/components/_base.scss
@@ -44,7 +44,6 @@ Clipping the overflow hides the bleed.
     filter: blur(3px);
     position: absolute;
     background-size: cover;
-    transform: translate3d(0, 0, 0);
     background-image: url('../images/blended-background.png'); // There is also a blended-background.jpg at ~100k
   }
   @include media-md {
